RESOLVED FIXED52108
[Qt][WK2] QWKView does not propagate show and hide events to the drawing area
https://bugs.webkit.org/show_bug.cgi?id=52108
Summary [Qt][WK2] QWKView does not propagate show and hide events to the drawing area
Balazs Kelemen
Reported 2011-01-08 03:01:04 PST
Changes in the visibility of the widget should be propagated to the drawing area to stop or resume updating it in the web process.
Attachments
proposed patch (1.71 KB, patch)
2011-01-08 10:43 PST, Balazs Kelemen
no flags
patch - with build fix (1.72 KB, patch)
2011-01-08 10:57 PST, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2011-01-08 10:43:25 PST
Created attachment 78319 [details] proposed patch
Balazs Kelemen
Comment 2 2011-01-08 10:57:50 PST
Created attachment 78320 [details] patch - with build fix
Kenneth Rohde Christiansen
Comment 3 2011-01-08 11:01:41 PST
Zalan, FYI, how does this fit with your work?
Balazs Kelemen
Comment 4 2011-01-08 11:12:13 PST
Note You need to log in before you can comment on or make changes to this bug.