[Qt][WK2] QWKView does not propagate show and hide events to the drawing area https://bugs.webkit.org/show_bug.cgi?id=52108

Reviewed by Kenneth Rohde Christiansen.

* UIProcess/API/qt/qgraphicswkview.cpp:
(QGraphicsWKView::event): Call setPageIsVisible on the drawing area
if the event is Show or Hide.

Canonical link: https://commits.webkit.org/65637@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75323 268f45cc-cd09-0410-ab3c-d52691b4dbfc